# shrike

./: .bazelrc  .coverage  .envrc  .gitignore  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  bazel  pyproject.toml  requirements.txt  requirements_lock.txt  requirements_sdist_lock.txt
eval/spa-spike/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
eval/spa-spike/src/: api.rs  app.rs  browser.rs  main.rs  status.rs
eval/spa-spike/src-tauri/: Cargo.toml  tauri.conf.json
native/: BUILD.bazel  Cargo.toml  README.md  layering_check.py
native/.cargo/: config.toml
native/_demo/: BUILD.bazel  Cargo.toml  demo_smoke.py
native/_demo/src/: lib.rs
native/patches/: BUILD.bazel  anki-i18n-bazel-build.patch  anki-i18n-bazel-gather.patch  anki-proto-bazel-buildrs.patch  anki-proto-bazel-rustrs.patch  anki-version-bazel.patch
native/shrike-cabi/: BUILD.bazel  Cargo.toml
native/shrike-cabi/smoke/: main.c
native/shrike-cabi/src/: engine.rs  lib.rs
native/shrike-cabi/tests/: smoke.rs
native/shrike-collection/: BUILD.bazel  Cargo.toml
native/shrike-collection/src/: adapter.rs  embed_text.rs  export.rs  lib.rs  media.rs  media_fetch.rs  note_types.rs  read.rs  write.rs
native/shrike-compute/: BUILD.bazel  Cargo.toml
native/shrike-compute/src/: lib.rs
native/shrike-derived/: BUILD.bazel  Cargo.toml
native/shrike-derived/src/: lib.rs
native/shrike-describe-remote/: BUILD.bazel  Cargo.toml
native/shrike-describe-remote/src/: lib.rs
native/shrike-embed/: BUILD.bazel  Cargo.toml
native/shrike-embed-remote/: BUILD.bazel  Cargo.toml
native/shrike-embed-remote/src/: lib.rs
native/shrike-embed/src/: clip.rs  lib.rs
native/shrike-engine-api/: BUILD.bazel  Cargo.toml
native/shrike-engine-api/src/: lib.rs  probe.rs
native/shrike-ffi/: BUILD.bazel  Cargo.toml
native/shrike-ffi/src/: lib.rs
native/shrike-index/: BUILD.bazel  Cargo.toml
native/shrike-index/src/: engine.rs  lib.rs
native/shrike-index/tests/: cross_binding.rs  save_concurrency.rs  save_does_not_block_search.rs
native/shrike-kernel/: BUILD.bazel  Cargo.toml
native/shrike-kernel/src/: actions.rs  cache_layout.rs  embed_set.rs  fusion.rs  index_orchestrator.rs  index_set.rs  lib.rs  media_fetch.rs  recognize.rs  runtime.rs  tag_centroids.rs  textsim.rs  watermark.rs
native/shrike-kernel/tests/: current_thread.rs  s2_ssrf_6to4_probe.rs  s6_repro.rs
native/shrike-llama-server/: BUILD.bazel  Cargo.toml
native/shrike-llama-server/src/: lib.rs
native/shrike-mobile/: BUILD.bazel  Cargo.toml
native/shrike-mobile/src/: lib.rs  tests.rs
native/shrike-net/: Cargo.toml
native/shrike-py/: BUILD.bazel  Cargo.toml  stubtest_allowlist.txt  stubtest_runner.py
native/shrike-recognize-apple/: BUILD.bazel  Cargo.toml  build.rs
native/shrike-schemas/: BUILD.bazel  Cargo.toml
native/shrike-store-api/: BUILD.bazel  Cargo.toml
scripts/: BUILD.bazel  README.md  build-native.sh  coverage-bazel.sh  coverage-rust.sh  coverage.sh  dev-setup.sh  eval_cross_space.py  eval_cross_space_floor.py  eval_cross_space_floor_admit.py  eval_cross_space_jina.py  eval_multimodal.py  eval_search_quality.py  eval_search_quality_corpus.py  fetch-llama-server.sh  fetch-multimodal-model.sh  gen_schema.py  launch-qa-server.sh  native-stale.sh  native-stamp.sh  package-skill.py  perf.sh  serve.bzl  serve.py  serve_test.py  test-embedding.sh  update-anki-descriptors.sh  update-llama-lock.sh
scripts/profiles/: BUILD.bazel  README.md  jina-omni.yml  jina-text-clip.yml  onnx-multispace.yml  text-onnx.yml
shrike-core/: BUILD.bazel  Cargo.toml  README.md  layering_check.py
shrike-core/.cargo/: config.toml
shrike-core/patches/: BUILD.bazel  anki-proto-bazel-buildrs.patch  usearch-bazel-cxxbridge-symlink.patch
shrike-core/scripts/: build-native.sh  native-stale.sh  native-stamp.sh
shrike-core/shrike-cabi/: BUILD.bazel  Cargo.toml
shrike-core/shrike-cache/: BUILD.bazel
shrike-core/shrike-collection/: BUILD.bazel  Cargo.toml
shrike-core/shrike-derived/: BUILD.bazel  Cargo.toml
shrike-core/shrike-describe-remote/: BUILD.bazel  Cargo.toml
shrike-core/shrike-embed/: BUILD.bazel  Cargo.toml
shrike-core/shrike-embed-remote/: BUILD.bazel  Cargo.toml
shrike-core/shrike-engine/: BUILD.bazel  Cargo.toml
shrike-core/shrike-engine-api/: BUILD.bazel  Cargo.toml
shrike-core/shrike-error/: BUILD.bazel  Cargo.toml
shrike-core/shrike-ffi/: BUILD.bazel
shrike-core/shrike-image/: BUILD.bazel  Cargo.toml
shrike-core/shrike-index/: BUILD.bazel  Cargo.toml
shrike-core/shrike-kernel/: BUILD.bazel  Cargo.toml
shrike-core/shrike-llama-server/: BUILD.bazel  Cargo.toml
shrike-core/shrike-media/: BUILD.bazel  Cargo.toml
shrike-core/shrike-mobile/: BUILD.bazel  Cargo.toml
shrike-core/shrike-net/: BUILD.bazel  Cargo.toml
shrike-core/shrike-network/: BUILD.bazel
shrike-core/shrike-platform/: BUILD.bazel
shrike-core/shrike-process/: BUILD.bazel
shrike-core/shrike-py/: BUILD.bazel  Cargo.toml  smoke_test.py
shrike-core/shrike-pyo3/: BUILD.bazel  Cargo.toml  smoke_test.py
shrike-core/shrike-recognize-apple/: BUILD.bazel  Cargo.toml
shrike-core/shrike-schemas/: BUILD.bazel  Cargo.toml
shrike-core/shrike-store/: BUILD.bazel  Cargo.toml
shrike-core/shrike-store-api/: BUILD.bazel  Cargo.toml
shrike-py/: BUILD.bazel  pyproject.toml
shrike-py/tests/: conftest.py
shrike-skills/: BUILD.bazel  package-skill.py
shrike-skills/create-cards/: SKILL.md
sidecar/: pyproject.toml  requirements.txt
sidecar/shrike/: collection.py  index.py  log.py  note_types.py  server.py  tools.py
skills/: BUILD.bazel
skills/anki-cards/: SKILL.md
tools/: BUILD.bazel  README.md  build-native-wheel.sh  build-sdist.sh  build-wheel.sh  check-wheel-parity.sh  check_llama_lock.py  coverage_subprocess.pth  import_spike.py  library_smoke.py  sdist-requirements.in  update-bazel-lock.sh  update-llama-lock.sh  update-requirements.sh  workspace_status.sh
tools/bazel/: BUILD.bazel  defs.bzl  pytest_runner.py  pytest_runner_test.py  sdist.bzl  sdist_builder.py
(+927 files in other folders)
