load("@rules_python//python:defs.bzl", "py_test")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("@shrike_pip//:requirements.bzl", "requirement")

# Phase 0 make-or-break spike (#242): the native-dependency wheels must import and
# run on Bazel's hermetic CPython toolchain, on every target platform. If this
# fails, the "consume native deps as wheels" assumption is wrong. See
# tools/import_spike.py for what it exercises.
py_test(
    name = "import_spike",
    size = "small",
    srcs = ["tools/import_spike.py"],
    main = "tools/import_spike.py",
    deps = [
        requirement("anki"),
        requirement("usearch"),
        requirement("onnxruntime"),
        requirement("numpy"),
    ],
)

# Phase 1 smoke (#243): the shrike library + its declared deps import cleanly and
# a pure function runs. Broader pytest migration is Phase 2 (#244).
py_test(
    name = "library_smoke",
    size = "small",
    srcs = ["tools/library_smoke.py"],
    main = "tools/library_smoke.py",
    deps = ["//src/shrike:shrike"],
)

# The release wheel (#245). Version is stamped from the git tag (STABLE_VERSION via
# tools/workspace_status.sh) — the exact tag version on a clean release/rc tag,
# replacing hatch-vcs as the artifact builder. strip_path_prefixes drops `src/` so
# the wheel ships `shrike/...`. Metadata mirrors pyproject.toml (the source of
# truth on the coexisting pip path); a parity gate diffs the two builds before the
# release path cuts over to this one.
py_wheel(
    name = "wheel",
    distribution = "shrike-mcp",
    version = "{STABLE_VERSION}",
    stamp = 1,
    python_tag = "py3",
    abi = "none",
    platform = "any",
    summary = "MCP server for Anki collection management",
    description_file = "README.md",
    description_content_type = "text/markdown",
    homepage = "https://github.com/lathrys-at/shrike",
    license = "AGPL-3.0-or-later",
    python_requires = ">=3.12",
    requires = [
        "anki>=25.0",
        "mcp>=1.20",
        "click>=8.0",
        "filelock>=3.0",
        "httpx>=0.27",
        "platformdirs>=4.0",
        "pyyaml>=6.0",
        "rich>=13.0",
        "usearch>=2.12",
        "numpy>=1.26",
    ],
    # Mirrors pyproject's [project.optional-dependencies] exactly (incl. `dev`, which
    # hatchling emits as Provides-Extra) so the two wheels' metadata matches for the
    # parity gate. pyproject declares no [project] classifiers, so neither wheel
    # carries any (the SPDX `license` field is the source of truth — PEP 639).
    extra_requires = {
        "socks": ["httpx[socks]>=0.27"],
        "onnx": [
            "onnxruntime>=1.17",
            "tokenizers>=0.20",
        ],
        "onnx-gpu": [
            "onnxruntime-gpu>=1.17",
            "tokenizers>=0.20",
        ],
        "clip": [
            "onnxruntime>=1.17",
            "tokenizers>=0.20",
            "pillow>=10",
        ],
        "dev": [
            "pytest>=8.0",
            "pytest-asyncio>=0.24",
            "pytest-cov>=5.0",
            "pytest-xdist>=3.6",
            "pytest-testmon>=2.1",
            "mypy>=1.10",
            "ruff>=0.8",
            "types-PyYAML",
            "trustme>=1.1",
        ],
    },
    entry_points = {
        "console_scripts": ["shrike = shrike.cli:cli"],
    },
    # `manual` so the per-PR `bazel test //...` lane doesn't build this release
    # artifact (and run `git describe` for it) on a shallow, tagless checkout —
    # release.yml and tools/build-wheel.sh name //:wheel explicitly.
    tags = ["manual"],
    strip_path_prefixes = ["src"],
    deps = ["//src/shrike:shrike"],
)
