load("@rules_python//python:defs.bzl", "py_test")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("@shrike_pip//:requirements.bzl", "requirement")
load("//tools/bazel:sdist.bzl", "py_sdist")

# Phase 0 make-or-break spike (#242): the native-dependency wheels must import and
# run on Bazel's hermetic CPython toolchain, on every target platform. If this
# fails, the "consume native deps as wheels" assumption is wrong. See
# tools/import_spike.py for what it exercises.
py_test(
    name = "import_spike",
    size = "small",
    srcs = ["tools/import_spike.py"],
    main = "tools/import_spike.py",
    deps = [
        requirement("anki"),
        requirement("usearch"),
        requirement("onnxruntime"),
        requirement("numpy"),
    ],
)

# Phase 1 smoke (#243): the shrike library + its declared deps import cleanly and
# a pure function runs. Broader pytest migration is Phase 2 (#244).
py_test(
    name = "library_smoke",
    size = "small",
    srcs = ["tools/library_smoke.py"],
    main = "tools/library_smoke.py",
    deps = ["//src/shrike:shrike"],
)

# The release wheel (#245; platform-tagged since #497). Version is stamped from the
# git tag (STABLE_VERSION via tools/workspace_status.sh) — the exact tag version on a
# clean release/rc tag, replacing hatch-vcs as the artifact builder.
# strip_path_prefixes drops `src/` and the extension package dir so the wheel ships
# `shrike/...` AND `shrike_native/...` (the compiled _native.so + stubs + py.typed):
# one artifact, no separate shrike-native dist, no version-skew surface. cp312-abi3 —
# one wheel per platform covers CPython 3.12+. The linux tags are the plain linux_*
# ones at build time; release.yml runs auditwheel repair to the manylinux tags PyPI
# requires before publishing. Metadata mirrors pyproject.toml (the source of truth on
# the coexisting dev pip path); tools/check-wheel-parity.sh keeps the two in lockstep.
py_wheel(
    name = "wheel",
    distribution = "shrike-mcp",
    version = "{STABLE_VERSION}",
    stamp = 1,
    python_tag = "cp312",
    abi = "abi3",
    platform = select({
        "//native/shrike-py:macos_arm64": "macosx_11_0_arm64",
        "//native/shrike-py:macos_x86_64": "macosx_11_0_x86_64",
        "//native/shrike-py:linux_x86_64": "linux_x86_64",
        "//native/shrike-py:linux_arm64": "linux_aarch64",
    }),
    summary = "MCP server for Anki collection management",
    description_file = "README.md",
    description_content_type = "text/markdown",
    # Mirror pyproject's [project.urls] (Project-URL, like hatchling) rather than the
    # deprecated Home-page field.
    project_urls = {
        "Homepage": "https://github.com/lathrys-at/shrike",
        "Issues": "https://github.com/lathrys-at/shrike/issues",
    },
    license = "AGPL-3.0-or-later",
    python_requires = ">=3.12",
    requires = [
        "mcp>=1.20",
        "click>=8.0",
        "filelock>=3.0",
        "httpx>=0.27",
        "platformdirs>=4.0",
        "pyyaml>=6.0",
        "rich>=13.0",
        "numpy>=1.26",
        # The dylib carrier for the native ort engine — hard dep since #497 (the
        # onnx/clip extras are gone; the `gpu` extra swaps the carrier).
        "onnxruntime>=1.17",
    ],
    # Mirrors pyproject's [project.optional-dependencies] exactly (incl. `dev`, which
    # hatchling emits as Provides-Extra) so the two wheels' metadata matches for the
    # parity gate. pyproject declares no [project] classifiers, so neither wheel
    # carries any (the SPDX `license` field is the source of truth — PEP 639).
    extra_requires = {
        "socks": ["httpx[socks]>=0.27"],
        "gpu": [
            "onnxruntime-gpu>=1.17",
        ],
        "dev": [
            "anki>=25.0",
            "usearch>=2.12",
            "tokenizers>=0.20",
            "pillow>=10",
            "pytest>=8.0",
            "pytest-asyncio>=0.24",
            "pytest-cov>=5.0",
            "pytest-xdist>=3.6",
            "pytest-testmon>=2.1",
            "mypy>=1.10",
            "ruff>=0.8",
            "types-pyyaml",
            "trustme>=1.1",
        ],
    },
    entry_points = {
        "console_scripts": ["shrike = shrike.cli:cli"],
    },
    # `manual` so the per-PR `bazel test //...` lane doesn't build this release
    # artifact (and run `git describe` for it) on a shallow, tagless checkout —
    # release.yml and tools/build-wheel.sh name //:wheel explicitly.
    tags = ["manual"],
    strip_path_prefixes = [
        "src",
        "native/shrike-py/python",
    ],
    deps = [
        # The package tree as a filegroup — py_wheel packages direct files only, so
        # the (srcs-less, #259) //src/shrike:shrike umbrella wouldn't contribute.
        "//src/shrike:wheel_srcs",
        "//src/shrike:py_typed",
        # The shrike_native package payload: __init__.py + .pyi stubs + py.typed +
        # the compiled _native.so (py_wheel packages a filegroup's files directly).
        "//native/shrike-py:wheel_files",
    ],
)

# The release sdist (#245). hatchling builds it via the `build` API from the staged
# source tree (the dist_files filegroups + the root-package files), git-independent
# thanks to the explicit [tool.hatch.build.targets.sdist] include, with the version
# stamped from the git tag. `manual` (like //:wheel) keeps it off the per-PR //...
# lane; tools/build-sdist.sh + release.yml name //:sdist explicitly.
py_sdist(
    name = "sdist",
    srcs = [
        "//src/shrike:dist_files",
        "//tests/unit:dist_files",
        "//tests/integration:dist_files",
        "tests/__init__.py",
        "tests/conftest.py",
        "pyproject.toml",
        "README.md",
        "LICENSE",
        "CHANGELOG.md",
    ],
    tags = ["manual"],
)
