"""Shrike build module (bzlmod).

Bazel is the polyglot build/test/package entry point (epic #241). This module
wires the hermetic Python toolchain and the PyPI dependency set; later phases add
rules_rust + a PyO3 extension (#247) behind the same graph. The legacy WORKSPACE
file is intentionally absent — bzlmod only.
"""

module(
    name = "shrike",
    # Build-system module version only. The *wheel* version is stamped from the
    # git tag at package time (Phase 3, #245), not taken from here.
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "2.0.2")

# Hermetic CPython, matching .python-version's minor (3.12). The patch level is
# whatever python-build-standalone build rules_python bundles for this version;
# pinning the *minor* is what governs manylinux/macOS wheel compatibility.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)

# Third-party Python deps come from PyPI as wheels — including the native ones
# (anki's bundled Rust backend, usearch C++, onnxruntime C++, tokenizers Rust) —
# resolved against a pinned, hashed lock. Bazel never rebuilds them from source.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "shrike_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "shrike_pip")

# ── Rust toolchain + crates: the polyglot proof (#247) ──────────────────────
# Proves the cross-language seam — rules_rust builds a PyO3 extension linked
# against the hermetic CPython, importable from a py_test (//native/_demo). The
# native-backend epics (#219 compiled extension, #224 PyO3 host) build on this.
# crate deps resolve from native/_demo's Cargo.toml/Cargo.lock via the rust
# toolchain's own cargo — no system Rust required.
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")  # copy_file (the .so rename)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//native/_demo:Cargo.lock",
    manifests = ["//native/_demo:Cargo.toml"],
)
use_repo(crate, "crates")

# ── Embedding-test model fixtures as pinned externals (#244 Phase 2c) ────────
# The embedding tests' models, fetched once + checksum-verified instead of
# downloaded from HuggingFace at test time (removing the #83/#93 flake). Lazily
# fetched — only an embedding test that data-deps one pulls it. The sha256s are
# the HuggingFace LFS oids. The integration conftest assembles these into a
# SHRIKE_TEST_MODEL_DIR tree under Bazel; model_cache then finds them present.
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "model_minilm_int8_onnx",
    downloaded_file_path = "model.onnx",
    sha256 = "afdb6f1a0e45b715d0bb9b11772f032c399babd23bfc31fed1c170afc848bdb1",
    urls = ["https://huggingface.co/Xenova/all-MiniLM-L6-v2/resolve/main/onnx/model_quantized.onnx"],
)

http_file(
    name = "model_minilm_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "da0e79933b9ed51798a3ae27893d3c5fa4a201126cef75586296df9b4d2c62a0",
    urls = ["https://huggingface.co/Xenova/all-MiniLM-L6-v2/resolve/main/tokenizer.json"],
)

http_file(
    name = "model_minilm_fp32_onnx",
    downloaded_file_path = "model.onnx",
    sha256 = "759c3cd2b7fe7e93933ad23c4c9181b7396442a2ed746ec7c1d46192c469c46e",
    urls = ["https://huggingface.co/Xenova/all-MiniLM-L6-v2/resolve/main/onnx/model.onnx"],
)

http_file(
    name = "model_roberta_int8_onnx",
    downloaded_file_path = "model.onnx",
    sha256 = "0d293f3930cd803878f1d3aaebdd52817e5e2f76377d706e2a5543ee4561c57a",
    urls = ["https://huggingface.co/Xenova/all-distilroberta-v1/resolve/main/onnx/model_quantized.onnx"],
)

http_file(
    name = "model_roberta_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "63735ef382776e869c0ee50f8e999ab19111bb794f8a451559e611077dfe7f25",
    urls = ["https://huggingface.co/Xenova/all-distilroberta-v1/resolve/main/tokenizer.json"],
)

http_file(
    name = "model_clip_text_onnx",
    downloaded_file_path = "text_model_quantized.onnx",
    sha256 = "73baab855d406190da9faa498cfedf65f15cf309f4cc7385b7b032e6d08e5c3a",
    urls = ["https://huggingface.co/Xenova/clip-vit-base-patch32/resolve/main/onnx/text_model_quantized.onnx"],
)

http_file(
    name = "model_clip_vision_onnx",
    downloaded_file_path = "vision_model_quantized.onnx",
    sha256 = "583fd1110a514667812fee7d684952aaf82a99b959760c8d7dca7e0ab9839299",
    urls = ["https://huggingface.co/Xenova/clip-vit-base-patch32/resolve/main/onnx/vision_model_quantized.onnx"],
)

http_file(
    name = "model_clip_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "f7f3b7af117d467b58374797691a6438d3e6b9e9cef800dfd5dced7f697a90cd",
    urls = ["https://huggingface.co/Xenova/clip-vit-base-patch32/resolve/main/tokenizer.json"],
)

http_file(
    name = "model_clip_preprocessor",
    downloaded_file_path = "preprocessor_config.json",
    sha256 = "6f638fb9401a6d6296feff533ee7efe657b787c49f954f82f5906b36ef2a1b1f",
    urls = ["https://huggingface.co/Xenova/clip-vit-base-patch32/resolve/main/preprocessor_config.json"],
)

# The GGUF for the llama-server backend (test_embedding/test_semantic/test_backends).
http_file(
    name = "model_gguf_minilm",
    downloaded_file_path = "all-MiniLM-L6-v2-Q4_K_M.gguf",
    sha256 = "2ec4cee28a27a9c973d5f5230930d6ef6e52694bd2bc71be26a9bef5b1d755e6",
    urls = ["https://huggingface.co/second-state/All-MiniLM-L6-v2-Embedding-GGUF/resolve/main/all-MiniLM-L6-v2-Q4_K_M.gguf"],
)

# The pinned llama-server binary (+ its shared libs, flat beside it) as a per-platform
# http_archive — tag + shas from scripts/llama-server.lock. The conftest puts the
# host one on PATH + the lib path for the embedding_server fixture. Lazily fetched.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_LLAMA_FILES = 'filegroup(name = "files", srcs = glob(["**"]), visibility = ["//visibility:public"])'

http_archive(
    name = "llama_server_macos_arm64",
    build_file_content = _LLAMA_FILES,
    sha256 = "edf417cd8dd148fd423ea758953caa43376df98d8f027b7748ea0399a9a8023f",
    strip_prefix = "llama-b9415",
    urls = ["https://github.com/ggml-org/llama.cpp/releases/download/b9415/llama-b9415-bin-macos-arm64.tar.gz"],
)

http_archive(
    name = "llama_server_macos_amd64",
    build_file_content = _LLAMA_FILES,
    sha256 = "7c07ab8bb59e249340ed15afe03d5f164521242942a406661d6c499efc186a84",
    strip_prefix = "llama-b9415",
    urls = ["https://github.com/ggml-org/llama.cpp/releases/download/b9415/llama-b9415-bin-macos-x64.tar.gz"],
)

http_archive(
    name = "llama_server_linux_amd64",
    build_file_content = _LLAMA_FILES,
    sha256 = "df22e2447cd16dc2ae039d6dccd3b734efac109e315fa61ec8e1d5000bcbee00",
    strip_prefix = "llama-b9415",
    urls = ["https://github.com/ggml-org/llama.cpp/releases/download/b9415/llama-b9415-bin-ubuntu-x64.tar.gz"],
)

http_archive(
    name = "llama_server_linux_arm64",
    build_file_content = _LLAMA_FILES,
    sha256 = "bf01d2ce3ea74402c757fa992388ef10987a6cdc0231b0c43353c1e5722ae22c",
    strip_prefix = "llama-b9415",
    urls = ["https://github.com/ggml-org/llama.cpp/releases/download/b9415/llama-b9415-bin-ubuntu-arm64.tar.gz"],
)
