"""Shrike build module (bzlmod).

Bazel is the polyglot build/test/package entry point (epic #241). This module
wires the hermetic Python toolchain and the PyPI dependency set; later phases add
rules_rust + a PyO3 extension (#247) behind the same graph. The legacy WORKSPACE
file is intentionally absent — bzlmod only.
"""

module(
    name = "shrike",
    # Build-system module version only. The *wheel* version is stamped from the
    # git tag at package time (Phase 3, #245), not taken from here.
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "2.0.2")
bazel_dep(name = "rules_cc", version = "0.2.19")  # Bazel 9 removed the native cc_* rules (#420)

# Hermetic CPython, matching .python-version's minor (3.12). The patch level is
# whatever python-build-standalone build rules_python bundles for this version;
# pinning the *minor* is what governs manylinux/macOS wheel compatibility.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
    # Register the bundled coverage tool so `bazel coverage` actually collects data
    # (without it, coverage.dat comes out empty). Backs the coverage lane (#262).
    configure_coverage_tool = True,
)

# Third-party Python deps come from PyPI as wheels — including the native ones
# (anki's bundled Rust backend, usearch C++, onnxruntime C++, tokenizers Rust) —
# resolved against a pinned, hashed lock. Bazel never rebuilds them from source.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "shrike_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "shrike_pip")

# Build-time tools for //:sdist (build / hatchling / hatch-vcs), in their own hub +
# lock so they never enter the runtime dependency set (requirements_lock.txt).
pip.parse(
    hub_name = "shrike_sdist_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_sdist_lock.txt",
)
use_repo(pip, "shrike_sdist_pip")

# ── Rust toolchain + crates: the native compute workspace (#247 → #269) ─────
# rules_rust builds the Shrike native crates (shrike-core/Cargo.toml workspace)
# against the hermetic CPython. The PyO3 binding crate (shrike-py) and the
# polyglot-proof demo are the only crates that see pyo3 (//shrike-core:layering_check
# enforces it); compute crates stay pure Rust. crate deps resolve from the
# workspace's single Cargo.lock via the rust toolchain's own cargo — no system
# Rust required.
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")  # copy_file (the .so rename)
bazel_dep(name = "rules_pkg", version = "1.0.1")  # the create-cards.skill bundle (#245)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//shrike-core:Cargo.lock",
    manifests = [
        "//shrike-core:Cargo.toml",
        "//shrike-core/shrike-collection:Cargo.toml",
        "//shrike-core/shrike-derived:Cargo.toml",
        "//shrike-core/shrike-embed:Cargo.toml",
        "//shrike-core/shrike-embed-remote:Cargo.toml",
        "//shrike-core/shrike-describe-remote:Cargo.toml",
        "//shrike-core/shrike-engine-api:Cargo.toml",
        "//shrike-core/shrike-ffi:Cargo.toml",
        "//shrike-core/shrike-index:Cargo.toml",
        "//shrike-core/shrike-kernel:Cargo.toml",
        "//shrike-core/shrike-llama-server:Cargo.toml",
        "//shrike-core/shrike-py:Cargo.toml",
        "//shrike-core/shrike-recognize-apple:Cargo.toml",
        "//shrike-core/shrike-schemas:Cargo.toml",
    ],
)
# Temporary: `@crates//:pyo3-log` resolves to the fork pinned by the
# `[patch.crates-io]` in //shrike-core:Cargo.toml (lathrys-at/pyo3-log = v0.13.3 with
# a widened pyo3 bound) — the crates.io release caps pyo3 at `<0.29`, blocking
# the RUSTSEC-2026-0176/-0177 bump. crate_universe vendors the git rev, pinned
# by its immutable commit SHA in MODULE.bazel.lock. Drop the patch once upstream
# ships a 0.29-compatible pyo3-log (Cleanup milestone, #519).
# usearch's cxx_build leaves OUT_DIR symlinks into the ephemeral build sandbox,
# which Bazel's output-tree validation rejects as dangling; the patch
# materializes/drops them (no behaviour change under plain cargo).
crate.annotation(
    crate = "usearch",
    patch_args = ["-p1"],
    patches = ["//shrike-core/patches:usearch-bazel-cxxbridge-symlink.patch"],
)
# cxx's C++ object (cxx_cc) needs GCC's STATIC libgcc.a on aarch64-linux (the
# outline-atomics helpers, #417); the shim dep appends a linux-only -lgcc to
# the link AFTER -lcxx_cc — gold resolves archives left to right, so position
# is the whole fix (a global --linkopt lands too early and resolves nothing).
crate.annotation(
    crate = "cxx",
    # REPLACES the metadata-supplied deps, so :cxx_cc (the crate's own C++
    # runtime, normally injected by its [package.metadata.bazel]) must be
    # restated alongside the shim.
    deps = [
        ":cxx_cc",
        "@@//shrike-core/patches:libgcc_shim",
    ],
)
# The anki tree under Bazel (#278 cutover): both anki build scripts run off
# the CHECKED-IN pinned protobuf descriptor set (//shrike-core/third_party/anki,
# refreshed by scripts/update-anki-descriptors.sh on tag bumps, tripwire-tested
# under Bazel) instead of cargo's shared-target-dir handoff, which doesn't
# exist across Bazel sandboxes. anki_proto is additionally patched (Bazel-only;
# cargo builds the unpatched checkout) to generate via prost's compile_fds —
# no protoc and no source-repo proto/ access, neither of which the sandbox
# has — and to stop writing generated py/ts interfaces into the read-only
# source repo.
crate.annotation(
    crate = "anki_proto",
    build_script_data = ["@@//shrike-core/third_party/anki:anki_descriptors.bin"],
    build_script_env = {
        "DESCRIPTORS_BIN": "$(execpath @@//shrike-core/third_party/anki:anki_descriptors.bin)",
    },
    patch_args = ["-p1"],
    patches = [
        "//shrike-core/patches:anki-proto-bazel-buildrs.patch",
        "//shrike-core/patches:anki-proto-bazel-rustrs.patch",
    ],
)
crate.annotation(
    crate = "anki_i18n",
    build_script_data = ["@@+http_archive+anki_src//:ftl"],
    build_script_env = {
        # The pinned source archive's ftl tree (see @anki_src). EXTRA_FTL_ROOT
        # being set selects the no-qt branch of get_ftl_data; the patched
        # gather.rs tolerates the dir not existing.
        "EXTRA_FTL_ROOT": "_absent_",
        "FTL_BASE": "$(execpath @@+http_archive+anki_src//:ftl)",
    },
    patch_args = ["-p1"],
    patches = [
        "//shrike-core/patches:anki-i18n-bazel-build.patch",
        "//shrike-core/patches:anki-i18n-bazel-gather.patch",
    ],
)
crate.annotation(
    crate = "anki",
    build_script_data = ["@@//shrike-core/third_party/anki:anki_descriptors.bin"],
    patch_args = ["-p1"],
    patches = ["//shrike-core/patches:anki-version-bazel.patch"],
    build_script_env = {
        "DESCRIPTORS_BIN": "$(execpath @@//shrike-core/third_party/anki:anki_descriptors.bin)",
    },
)
use_repo(crate, "crates")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# The pinned anki SOURCE archive (#278 cutover): the anki_i18n build script
# needs the repo's ftl/ template strings, which the per-crate Bazel package
# doesn't carry. The github tag tarball is pinned + checksummed (no submodules
# — the translation repos are tolerated as absent; English-only strings, which
# is all the backend needs).
http_archive(
    name = "anki_src",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["ftl"])
""",
    sha256 = "e9fda82b3b57fba3a416d8f91cf4db64368dd2f0bc02090d626df081572333c6",
    strip_prefix = "anki-25.09.4",
    urls = ["https://github.com/ankitects/anki/archive/refs/tags/25.09.4.tar.gz"],
)

# ── Embedding-test model fixtures as pinned externals (#244 Phase 2c) ────────
# The embedding tests' models, fetched once + checksum-verified instead of
# downloaded from HuggingFace at test time (removing the #83/#93 flake). Lazily
# fetched — only an embedding test that data-deps one pulls it. The sha256s are
# the HuggingFace LFS oids. The integration conftest assembles these into a
# SHRIKE_TEST_MODEL_DIR tree under Bazel; model_cache then finds them present.
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "model_minilm_int8_onnx",
    downloaded_file_path = "model.onnx",
    sha256 = "afdb6f1a0e45b715d0bb9b11772f032c399babd23bfc31fed1c170afc848bdb1",
    urls = ["https://huggingface.co/Xenova/all-MiniLM-L6-v2/resolve/main/onnx/model_quantized.onnx"],
)

http_file(
    name = "model_minilm_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "da0e79933b9ed51798a3ae27893d3c5fa4a201126cef75586296df9b4d2c62a0",
    urls = ["https://huggingface.co/Xenova/all-MiniLM-L6-v2/resolve/main/tokenizer.json"],
)

http_file(
    name = "model_minilm_fp32_onnx",
    downloaded_file_path = "model.onnx",
    sha256 = "759c3cd2b7fe7e93933ad23c4c9181b7396442a2ed746ec7c1d46192c469c46e",
    urls = ["https://huggingface.co/Xenova/all-MiniLM-L6-v2/resolve/main/onnx/model.onnx"],
)

http_file(
    name = "model_roberta_int8_onnx",
    downloaded_file_path = "model.onnx",
    sha256 = "0d293f3930cd803878f1d3aaebdd52817e5e2f76377d706e2a5543ee4561c57a",
    urls = ["https://huggingface.co/Xenova/all-distilroberta-v1/resolve/main/onnx/model_quantized.onnx"],
)

http_file(
    name = "model_roberta_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "63735ef382776e869c0ee50f8e999ab19111bb794f8a451559e611077dfe7f25",
    urls = ["https://huggingface.co/Xenova/all-distilroberta-v1/resolve/main/tokenizer.json"],
)

http_file(
    name = "model_clip_text_onnx",
    downloaded_file_path = "text_model_quantized.onnx",
    sha256 = "73baab855d406190da9faa498cfedf65f15cf309f4cc7385b7b032e6d08e5c3a",
    urls = ["https://huggingface.co/Xenova/clip-vit-base-patch32/resolve/main/onnx/text_model_quantized.onnx"],
)

http_file(
    name = "model_clip_vision_onnx",
    downloaded_file_path = "vision_model_quantized.onnx",
    sha256 = "583fd1110a514667812fee7d684952aaf82a99b959760c8d7dca7e0ab9839299",
    urls = ["https://huggingface.co/Xenova/clip-vit-base-patch32/resolve/main/onnx/vision_model_quantized.onnx"],
)

http_file(
    name = "model_clip_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "f7f3b7af117d467b58374797691a6438d3e6b9e9cef800dfd5dced7f697a90cd",
    urls = ["https://huggingface.co/Xenova/clip-vit-base-patch32/resolve/main/tokenizer.json"],
)

http_file(
    name = "model_clip_preprocessor",
    downloaded_file_path = "preprocessor_config.json",
    sha256 = "6f638fb9401a6d6296feff533ee7efe657b787c49f954f82f5906b36ef2a1b1f",
    urls = ["https://huggingface.co/Xenova/clip-vit-base-patch32/resolve/main/preprocessor_config.json"],
)

# The GGUF for the llama-server backend (test_embedding/test_semantic/test_backends).
http_file(
    name = "model_gguf_minilm",
    downloaded_file_path = "all-MiniLM-L6-v2-Q4_K_M.gguf",
    sha256 = "2ec4cee28a27a9c973d5f5230930d6ef6e52694bd2bc71be26a9bef5b1d755e6",
    urls = ["https://huggingface.co/second-state/All-MiniLM-L6-v2-Embedding-GGUF/resolve/main/all-MiniLM-L6-v2-Q4_K_M.gguf"],
)

# ── Wave-2 offline-integration profile models (#667, epic #565) ──────────────
# Back the pure-ONNX multi-space profile (embeddinggemma text + MobileCLIP2 image)
# and the stacked jina-text-clip profile. Materialized by //scripts:serve from
# runfiles (its `data` deps below) under `bazel run`. Lazily fetched, NOT pulled by
# the per-PR test lane (only :serve data-deps them and :serve is `manual`). shas are
# HuggingFace LFS oids, or the byte sha256 for a git-stored (non-LFS) file. Mirrored
# in tests/integration/model_cache.py (the script-fallback fetch source) and
# scripts/serve.py's _model_sources() table — keep all three in sync.

# EmbeddingGemma-300m ONNX (text, 768-dim) — the onnx-multispace text leg. The
# export ships ONLY quantized graphs as a tiny graph stub + an EXTERNAL weight-data
# file: BOTH must materialize (the graph references model_quantized.onnx_data by
# that exact name; onnxruntime loads it relative to the graph dir). OnnxBackend's
# variant-suffix resolver finds model_quantized.onnx with no rename.
http_file(
    name = "model_embeddinggemma_int8_onnx",
    downloaded_file_path = "model_quantized.onnx",
    sha256 = "172efde319fe1542dc41f31be6154910b05b78f7a861c265c4600eec906bd6d8",
    urls = ["https://huggingface.co/onnx-community/embeddinggemma-300m-ONNX/resolve/main/onnx/model_quantized.onnx"],
)

http_file(
    name = "model_embeddinggemma_int8_onnx_data",
    downloaded_file_path = "model_quantized.onnx_data",
    sha256 = "705626e28e4c23c82ade34566b4197d97f534c12275fa406dfb71e9937d388c0",
    urls = ["https://huggingface.co/onnx-community/embeddinggemma-300m-ONNX/resolve/main/onnx/model_quantized.onnx_data"],
)

http_file(
    name = "model_embeddinggemma_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "4dda02faaf32bc91031dc8c88457ac272b00c1016cc679757d1c441b248b9c47",
    urls = ["https://huggingface.co/onnx-community/embeddinggemma-300m-ONNX/resolve/main/tokenizer.json"],
)

# MobileCLIP2-S2 ONNX (text+image, 512-dim) — the onnx-multispace image leg. Spike
# #568 verified plhery/mobileclip2-onnx @ ba95759a loads through ClipBackend as-is
# (flat text_model.onnx + vision_model.onnx + per-size preprocessor_config.json + a
# repo-root tokenizer.json) for both S0 and S2. S2 is the better dogfooding default:
# same text encoder, a larger/better vision graph (143 MB vs S0's 45 MB) for cleaner
# cross-modal separation. Pinned to the spike's exact revision. tokenizer.json +
# preprocessor_config.json are git-stored (non-LFS) → byte sha256 (shared across
# sizes — byte-identical to S0).
http_file(
    name = "model_mobileclip2_text_onnx",
    downloaded_file_path = "text_model.onnx",
    sha256 = "622f10372bca71b5017f2efc5f8c2886610a2592b636de8984d717f03213f031",
    urls = ["https://huggingface.co/plhery/mobileclip2-onnx/resolve/ba95759a5bdbaca53e9111e2550a76ec09c8fd9e/onnx/s2/text_model.onnx"],
)

http_file(
    name = "model_mobileclip2_vision_onnx",
    downloaded_file_path = "vision_model.onnx",
    sha256 = "a841f72c5a5085748bbe271a1d5718aba877822a15cba865bdbd0d37036b849e",
    urls = ["https://huggingface.co/plhery/mobileclip2-onnx/resolve/ba95759a5bdbaca53e9111e2550a76ec09c8fd9e/onnx/s2/vision_model.onnx"],
)

http_file(
    name = "model_mobileclip2_preprocessor",
    downloaded_file_path = "preprocessor_config.json",
    sha256 = "8c1c02280bd0edb8257c70c475e1cf06d936f5ff3a37bc13d1e9db9674356803",
    urls = ["https://huggingface.co/plhery/mobileclip2-onnx/resolve/ba95759a5bdbaca53e9111e2550a76ec09c8fd9e/onnx/s2/preprocessor_config.json"],
)

http_file(
    name = "model_mobileclip2_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "b556ac8c99757ffb677208af34bc8c6721572114111a6e0aaf5fa69ff0b8d842",
    urls = ["https://huggingface.co/plhery/mobileclip2-onnx/resolve/ba95759a5bdbaca53e9111e2550a76ec09c8fd9e/tokenizer.json"],
)

# jina-clip-v2 ONNX — registered for the STACKED jina-text-clip stream. The
# published export is a SINGLE FUSED model.onnx (text+image on every call), NOT the
# split text_model/vision_model graphs ClipBackend wants, so it is not a ClipBackend
# drop-in as-published (see model_cache.py for the caveat). tokenizer.json is LFS;
# preprocessor_config.json is git-stored → byte sha256.
http_file(
    name = "model_jina_clip_v2_int8_onnx",
    downloaded_file_path = "model_quantized.onnx",
    sha256 = "65c6423fc82eecffb7f7f813730c6a6f0d28e2dc908e414250733b1416ed30bf",
    urls = ["https://huggingface.co/jinaai/jina-clip-v2/resolve/main/onnx/model_quantized.onnx"],
)

http_file(
    name = "model_jina_clip_v2_tokenizer",
    downloaded_file_path = "tokenizer.json",
    sha256 = "6601c4120779a1a3863897ba332fe3481d548e363bec2c91eba10ef8640a5e93",
    urls = ["https://huggingface.co/jinaai/jina-clip-v2/resolve/main/tokenizer.json"],
)

http_file(
    name = "model_jina_clip_v2_preprocessor",
    downloaded_file_path = "preprocessor_config.json",
    sha256 = "920bc482e3dad0de2bffe4e534181a1f61a4a6baefa1aee53b75849557786301",
    urls = ["https://huggingface.co/jinaai/jina-clip-v2/resolve/main/preprocessor_config.json"],
)


# The pinned llama-server binary (+ its shared libs, flat beside it) as a per-platform
# http_archive — tag + shas from tools/llama-server.lock. The conftest puts the
# host one on PATH + the lib path for the embedding_server fixture. Lazily fetched.
#
# The tag + 4 shas are DUPLICATED here from tools/llama-server.lock (Bazel can't
# read the lock at module-resolution time). //tools:llama_lock_in_sync_test is the
# tripwire: it parses the lock and asserts every value below matches, failing CI on
# drift. To bump: `tools/update-llama-lock.sh <TAG>` then mirror the values here
# (the test names the exact mismatch).
_LLAMA_FILES = 'filegroup(name = "files", srcs = glob(["**"]), visibility = ["//visibility:public"])'

http_archive(
    name = "llama_server_macos_arm64",
    build_file_content = _LLAMA_FILES,
    sha256 = "72a93f3e68c31de3e438d462669aad1fcdb423b995e9c41033cc7d27a9a3ac69",
    strip_prefix = "llama-b9637",
    urls = ["https://github.com/ggml-org/llama.cpp/releases/download/b9637/llama-b9637-bin-macos-arm64.tar.gz"],
)

http_archive(
    name = "llama_server_macos_amd64",
    build_file_content = _LLAMA_FILES,
    sha256 = "71743f8db0958e7c266cceb7add7b16aa418a964667e471094aa6ae65b9c8298",
    strip_prefix = "llama-b9637",
    urls = ["https://github.com/ggml-org/llama.cpp/releases/download/b9637/llama-b9637-bin-macos-x64.tar.gz"],
)

http_archive(
    name = "llama_server_linux_amd64",
    build_file_content = _LLAMA_FILES,
    sha256 = "a50ee14f021a9d8e92e30f622f7e3be1318ee1125bb9a9ba8d2025388df48743",
    strip_prefix = "llama-b9637",
    urls = ["https://github.com/ggml-org/llama.cpp/releases/download/b9637/llama-b9637-bin-ubuntu-x64.tar.gz"],
)

http_archive(
    name = "llama_server_linux_arm64",
    build_file_content = _LLAMA_FILES,
    sha256 = "211d9e9ee738698beb7ca271be82661ae2b5da3fbb489cf7d9e4e6ed601be106",
    strip_prefix = "llama-b9637",
    urls = ["https://github.com/ggml-org/llama.cpp/releases/download/b9637/llama-b9637-bin-ubuntu-arm64.tar.gz"],
)
