[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shrike"]

[tool.hatch.version]
path = "src/shrike/__init__.py"

[project]
name = "shrike"
dynamic = ["version"]
description = "MCP server for Anki collection management"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "anki>=25.0",
    "mcp>=1.20",
    "click>=8.0",
    "filelock>=3.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "usearch>=2.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-testmon>=2.1",  # local-only: `pytest --testmon` runs just affected tests (see CONTRIBUTING.md)
    "mypy>=1.10",
    "ruff>=0.8",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that start a server and make HTTP requests",
    "embedding: tests that require llama-server and a GGUF model",
]

[tool.coverage.run]
# parallel + the coverage_subprocess.pth hook let us capture the server, which
# the integration suite runs as a `python -m shrike.server` subprocess. Without
# this, ~all of server.py/daemon.py would read as uncovered.
source = ["shrike"]
branch = true
parallel = true
concurrency = ["thread"]

[tool.coverage.report]
show_missing = true
# Ratchet: bump this up as coverage climbs; never lower it just to make CI pass.
# Measured ~73% on the unit + non-embedding integration suite (embedding-gated
# CLI paths aren't counted in CI); the buffer absorbs platform/timing variance.
fail_under = 70

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["anki.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["usearch.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[project.scripts]
shrike = "shrike.cli:cli"
